# 6303_piaa_lab5

./: CMakeLists.txt  README.md
src/: KMP.cpp  KMP.h  checkShift.cpp  compareSimpleVsKmp.cpp  main.cpp  patternSearch.cpp
test/: TestKMP.cpp  TestKMP.h  testCheckShift.cpp  testPatternSearch.cpp  testPrefix.cpp
